# hypermap_rviz_plugin

./: CMakeLists.txt  package.xml  plugin_description.xml
include/: hypermapdisplay.h  movable_text.h  semanticmapdisplay.h
include/hypermap_rviz_plugin/: glasbey.h  hypermapdisplay.h  movable_text.hpp  semanticmapdisplay.h
src/: hypermapdisplay.cpp  movable_text.cpp  semanticmapdisplay.cpp
test/: publish_semantic_map.py
